Added mock concept re-design

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <body>
     <header>
-        <h1 class="logo">SafeStak</h1>
+        <h1 class="logo">{SAFE}stak</h1>
     </header>
     <main>
         <section class="hero">
@@ -89,7 +89,7 @@
             <dt>Ticker</dt>
             <dd>SAFE</dd>
             <dt>Margin</dt>
-            <dd>4%</dd>
+            <dd>4.4%</dd>
             <dt>Pledge</dt>
             <dd>500,000 ADA</dd>
             <dt>Hardware</dt>
