Tweaked mock concept re-design

--- a/concept/concept.html
+++ b/concept/concept.html
@@ -18,9 +18,10 @@
     <style>
         h1 {
             color: #EEE;
+            font-size:34px;
+            letter-spacing: 2px;
             font-family: Consolas, monaco, monospace;
             margin: 0;
-            letter-spacing: 3px;
             text-transform: none;
         }
 
@@ -55,13 +56,17 @@
             margin: auto;
             color: #BBB;
             background: #173b69;
-            padding: 15px 0;
+            padding: 20px 10px;
             text-align: right;
         }
 
         .debt-content {
             padding: 0;
             font-size: 18px;
+        }
+
+        .debt-content ul li {
+            text-align: left;
         }
 
         header .navbar {
