Tweaked mock concept re-design

--- a/concept/concept.html
+++ b/concept/concept.html
@@ -124,7 +124,7 @@
                     <div class="col-md-6 col-lg-6">
                         <div class="banner_text forResBannerText">
                             <h1 class="banner_title">
-                                Your <img src='adacoin.png' alt="₳" /> is in safe hands
+                                Your <img style='width:44px; height: 44px;' src='adacoin.png' alt="₳" /> is in safe hands
                             </h1>
                             <p class="banner_sub_head mb-4 mt-4">
                                 We are a premium stake pool for Cardano with closely-monitored, highly-specialised cloud
