--- a/concept/concept.html
+++ b/concept/concept.html
@@ -17,7 +17,7 @@
     <style>
         h1 {
             color: #EEE;
-            font-size:34px;
+            font-size: 34px;
             letter-spacing: 2px;
             font-family: Consolas, monaco, monospace;
             margin: 0;
@@ -124,12 +124,13 @@
                     <div class="col-md-6 col-lg-6">
                         <div class="banner_text forResBannerText">
                             <h1 class="banner_title">
-                                Your <img style='width:44px; height: 44px;' src='adacoin.png' alt="₳" /> is in safe hands
+                                Your <img style='width:44px; height: 44px;' src='adacoin.png' alt="₳" /> is in safe
+                                hands
                             </h1>
                             <p class="banner_sub_head mb-4 mt-4">
-                                We are a premium stake pool for Cardano with closely-monitored, highly-specialised cloud
-                                infrastructure providing reliable returns while upholding the integrity of the Cardano
-                                blockchain protocol.
+                                Rest easy and trust our closely-monitored, specialised cloud
+                                infrastructure to provide reliable returns while upholding the integrity of the Cardano
+                                blockchain ecosystem
                             </p>
                             <dl class="pool-details">
                                 <dt>Ticker</dt>
