Tweaked mock concept re-design

--- a/concept/concept.html
+++ b/concept/concept.html
@@ -199,14 +199,6 @@
                                 </div>
                             </a>
                         </div>
-                        <div id="video-popup-overlay"></div>
-                        <div id="video-popup-container">
-                            <div id="video-popup-close" class="fade">✖</div>
-                            <div id="video-popup-iframe-container">
-                                <iframe id="video-popup-iframe" src="" width="100%" height="100%"
-                                    frameborder="0"></iframe>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -224,19 +216,19 @@
                             <div class="debt-content">
                                 <ul>
                                     <li>
-                                        Margin drops over time as our pool grows
+                                        Returns for our delegators grow as we grow
                                         <ul style='padding:5px 20px 0;'>
-                                            <li>5-10M: 4.3%</li>
-                                            <li>10-20M: 4.0%</li>
-                                            <li>20-40M: 3.5%</li>
-                                            <li>40-80M: 2.8%</li>
-                                            <li>80M-Saturation: 1.9%</li>
+                                            <li>05-10M staked: 4.3% margin</li>
+                                            <li>10-20M staked: 4.0% margin</li>
+                                            <li>20-40M staked: 3.5% margin</li>
+                                            <li>40-80M staked: 2.8% margin</li>
+                                            <li>80M-Saturation: 1.9% margin</li>
                                         </ul>
                                     </li>
-                                    <li>Fees will always adhere to the minimum value of the protocol (228 ADA at the
-                                        time of writing)</li>
-                                    <li>Data and iteration drive our optimisations to ensure maximum returns. Our
-                                        block-producing metrics are closely monitored and regularly benchmarked </li>
+                                    <li>Lowest fees as required by the protocol - 228 ADA/epoch at the
+                                        time of writing</li>
+                                    <li>We are perfectionists at heart and continuously strive to roll-out optimisations to our hardware and software configurations.
+                                        Metrics are closely monitored and regularly benchmarked against our peers</li>
                                 </ul>
                             </div>
                         </div>
@@ -260,13 +252,13 @@
                             <div class="debt-content">
                                 <ul>
                                     <li>
-                                        All staking rewards for the pool go back into increasing our pledge. We are in
-                                        it for the long term
+                                        <strong>All</strong> our rewards go back into increasing our pledge. We are in
+                                        it for the long haul, baby!
                                     </li>
                                     <li>Transparency, openness and fairness are our core ideals. We have open-sourced
                                         our entire tech-stack to help others in Cardano community</li>
                                     <li>Our life savings (and more) fund our pledge and the administrative costs of this
-                                        pool</li>
+                                        pool for maximum skin in the game</li>
                                 </ul>
                             </div>
                         </div>
@@ -294,8 +286,8 @@
                                         powerhouses in the world
                                     </li>
                                     <li>Airtight security verified by a certified cyber security professional</li>
-                                    <li>Applied best practices from designing, implementing and supporting highly
-                                        available, low latency distributed systems </li>
+                                    <li>Applied our expertise in designing, implementing and supporting highly
+                                        available, low latency distributed systems at scale</li>
                                 </ul>
                             </div>
                         </div>
@@ -311,22 +303,22 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12">
-                            <h2 class="heading"><span>Features Comparison</span></h2>
+                            <h2 class="heading"><span>Comparison To Other Pools</span></h2>
                             <div class="table-feature">
                                 <table>
                                     <tbody>
                                         <tr>
                                             <th>&nbsp;</th>
                                             <th>{SAFE}stak</th>
-                                            <th>Other Stake Pools</th>
+                                            <th>Most other pools</th>
                                         </tr>
                                         <tr>
-                                            <td>Sliding reduction of pool margin</td>
+                                            <td>Margin Reduction As Pool Grows</td>
                                             <td><i class="fa fa-check  text-success"></i></td>
                                             <td><i class="fa fa-times "></i></td>
                                         </tr>
                                         <tr>
-                                            <td>Active/Passive Block Producers</td>
+                                            <td>Active/Passive Block Producers for Resiliency</td>
                                             <td><i class="fa fa-check  text-success"></i></td>
                                             <td><i class="fa fa-times "></i></td>
                                         </tr>
@@ -336,12 +328,17 @@
                                             <td><i class="fa fa-times "></i></td>
                                         </tr>
                                         <tr>
-                                            <td>Security review compliant</td>
+                                            <td>Security Review Compliant</td>
                                             <td><i class="fa fa-check  text-success"></i></td>
                                             <td><i class="fa fa-times "></i></td>
                                         </tr>
                                         <tr>
-                                            <td>Open-sourced entire tech stack</td>
+                                            <td>Open-sourced Full Tech Stack</td>
+                                            <td><i class="fa fa-check  text-success"></i></td>
+                                            <td><i class="fa fa-times "></i></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Multiple Datacenter Redundancy</td>
                                             <td><i class="fa fa-check  text-success"></i></td>
                                             <td><i class="fa fa-times "></i></td>
                                         </tr>
@@ -418,7 +415,7 @@
                 </li>
                 <li class="footer-link protonmail">
                     <a aria-label="SafeStak on ProtonMail" title="SafeStak on ProtonMail"
-                        href="mailto:admin@safestak.com" target="_blank" rel="noopener noreferrer">
+                        href="mailto:safestak@pm.me" target="_blank" rel="noopener noreferrer">
                         <svg stroke="#4273ea" fill="#4273ea" stroke-width="0" viewBox="0 0 24 24" height="1.1em"
                             width="1.1em" xmlns="http://www.w3.org/2000/svg">
                             <path xmlns="http://www.w3.org/2000/svg"
