Tweaked mock concept re-design

--- a/concept/concept.html
+++ b/concept/concept.html
@@ -167,7 +167,7 @@
                                 <dt>Ticker</dt>
                                 <dd>SAFE</dd>
                                 <dt>Margin</dt>
-                                <dd><a href='#rewards'>1.9% - 4.4%</a></dd>
+                                <dd><a href='#rewards' style='color:#EEE'>1.9% - 4.4%</a></dd>
                                 <dt>Pledge</dt>
                                 <dd>500,000 ₳</dd>
                             </dl>
