Tweaked mock concept re-design

--- a/concept/concept.html
+++ b/concept/concept.html
@@ -218,17 +218,17 @@
                                     <li>
                                         Returns for our delegators grow as we grow
                                         <ul style='padding:5px 20px 0;'>
-                                            <li>05-10M staked: 4.3% margin</li>
-                                            <li>10-20M staked: 4.0% margin</li>
-                                            <li>20-40M staked: 3.5% margin</li>
-                                            <li>40-80M staked: 2.8% margin</li>
-                                            <li>80M-Saturation: 1.9% margin</li>
+                                            <li>05-10M staked: 4.3% fees</li>
+                                            <li>10-20M staked: 4.0% fees</li>
+                                            <li>20-40M staked: 3.5% fees</li>
+                                            <li>40-80M staked: 2.8% fees</li>
+                                            <li>80M-Saturation: 1.9% fees</li>
                                         </ul>
                                     </li>
                                     <li>Lowest fees as required by the protocol - 228 ADA/epoch at the
                                         time of writing</li>
-                                    <li>We are perfectionists at heart and continuously strive to roll-out optimisations to our hardware and software configurations.
-                                        Metrics are closely monitored and regularly benchmarked against our peers</li>
+                                    <li>We are perfectionists at heart and continuously strive to optimise block rewards!</li>
+                                    <li>Metrics are closely monitored and regularly benchmarked against our peers</li>
                                 </ul>
                             </div>
                         </div>
