Tweaked mock concept re-design

--- a/concept/concept.html
+++ b/concept/concept.html
@@ -1,5 +1,40 @@
 <html lang="en">
-
+<!-- 
+            __     
+           / _|    
+ ___  __ _| |_ ___ 
+/ __|/ _` |  _/ _ \
+\__ \ (_| | ||  __/
+|___/\__,_|_| \___|
+ .            .   .
+    '       .     .
+ :  ;       : .   ;
+ |   _.---.._ .   |
+ .-"'        `;"--,
+ L""--..__    | .'J
+ |:`' - ..`""-.'  |
+ |.        `":J   F
+ J:   ,-.    .|  J
+ J    FG)|   ;F  |
+  L.  `-'   .J   F '
+  L:        :|  J/, ,   .my
+  |'._      :| /^_,- '  \-)
+  `c-.__'- .;F/ =_,;_"  F"J
+- -=_,) `"--3'7'"    "-J  |
+.   ' .-';,F;L,4_  "-.  `  F
+   ,   ' ;'/    ^-,  "-._J
+.%52_._' ,-' ,     .   .-;_
+`3_((  "`   .-`;  -' ,5-'  "-._
+   `-._ .-"    "-; //  \,     "-._
+       "   itz    `G    L._      `\
+                   `L   J  `"-._   \
+                    |    L,-"' `\   \
+                    J    '     _J;   \
+                     L     _,-'  `\ ,-)
+                     \._,-'        `r',;=-.
+                                    (f _,/'
+                                     "'
+                                      -->
 <head>
     <title>SafeStak - Premium Stake Pool securing the Cardano Blockchain</title>
     <meta charset="UTF-8">
@@ -55,8 +90,8 @@
             height: 80px;
             border-radius: 50%;
             background: none !important;
-            background-size: 100%!important;
-            box-shadow: 0px 0px 80px rgba(88,88,88,.8);
+            background-size: 100% !important;
+            box-shadow: 0px 0px 80px rgba(88, 88, 88, .8);
             position: absolute;
             top: 50%;
             z-index: 1;
@@ -155,13 +190,14 @@
                     <div class="col-md-6 col-lg-6">
                         <div class="banner_text forResBannerText">
                             <h1 class="banner_title">
-                                Your <img style='width:28px; height: 28px;' src='adacoin.png' alt="₳" /> is in safe
+                                Your <img style='width:28px; height: 28px;' src='adacoin.png' alt="₳" /> in safe
                                 hands
                             </h1>
                             <p class="banner_sub_head mb-4 mt-4">
-                                Rest easy as our closely-monitored, specialised cloud
-                                infrastructure provide reliable returns while upholding the integrity of the Cardano
-                                blockchain ecosystem
+                                Rest easy while investing in a better future as our dependable and resilient cloud infrastructure give stakeholders
+                                exceptional return on stake, all while reliably powering and fortifying <a
+                                    href='https://www.cardano.org/ouroboros/' target='_blank'
+                                    style='color:#EEE'>Cardano's game-changing blockchain network</a>
                             </p>
                             <dl class="pool-details">
                                 <dt>Ticker</dt>
@@ -208,7 +244,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h2 id='rewards' class="heading resHead"><span>Maximising Your Rewards</span></h2>
+                            <h2 id='rewards' class="heading resHead"><span>Maximising Your Staking Rewards</span></h2>
                         </div>
                     </div>
                     <div class="row">
@@ -216,19 +252,20 @@
                             <div class="debt-content">
                                 <ul>
                                     <li>
-                                        Returns for our delegators grow as we grow
-                                        <ul style='padding:5px 20px 0;'>
-                                            <li>05-10M staked: 4.3% fees</li>
-                                            <li>10-20M staked: 4.0% fees</li>
-                                            <li>20-40M staked: 3.5% fees</li>
-                                            <li>40-80M staked: 2.8% fees</li>
-                                            <li>80M-Saturation: 1.9% fees</li>
+                                        Your return on stake grows with us
+                                        <ul style='padding:5px 20px 0;font-family:consolas; font-size:0.8em;'>
+                                            <li>5M-10M staked => 4.3% fees</li>
+                                            <li>10-20M staked => 4.0% fees</li>
+                                            <li>20-40M staked => 3.5% fees</li>
+                                            <li>40-80M staked => 2.8% fees</li>
+                                            <li>80M-Saturation=> 1.9% fees</li>
                                         </ul>
                                     </li>
-                                    <li>Lowest fees as required by the protocol - 228 ADA/epoch at the
+                                    <li>Lowest fixed fees as required by the protocol - 228 ₳/epoch at the
                                         time of writing</li>
-                                    <li>We are perfectionists at heart and continuously strive to optimise block rewards!</li>
-                                    <li>Metrics are closely monitored and regularly benchmarked against our peers</li>
+                                    <li>We are competitive perfectionists at heart, continuously optimising for block production and
+                                        rewards. Relevant metrics are monitored and regularly benchmarked
+                                        against our peers</li>
                                 </ul>
                             </div>
                         </div>
@@ -253,9 +290,10 @@
                                 <ul>
                                     <li>
                                         <strong>All</strong> our rewards go back into increasing our pledge. We are in
-                                        it for the long haul, baby!
+                                        it for the long haul baby!
                                     </li>
-                                    <li>Transparency, openness and fairness are our core ideals. We have open-sourced
+                                    <li>Transparency, openness and fairness are our core ideals. We have <a
+                                            href='https://www.github.com/SafeStak' target='_blank'>open-sourced</a>
                                         our entire tech-stack to help others in Cardano community</li>
                                     <li>Our life savings (and more) fund our pledge and the administrative costs of this
                                         pool for maximum skin in the game</li>
@@ -274,7 +312,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h2 class="heading resHead"><span>Technical excellence</span></h2>
+                            <h2 class="heading resHead"><span>Technical Excellence at Scale</span></h2>
                         </div>
                     </div>
                     <div class="row">
@@ -285,8 +323,9 @@
                                         Combined 30+ years of senior experience in the largest technology and e-commerce
                                         powerhouses in the world
                                     </li>
-                                    <li>Airtight security verified by a certified cyber security professional</li>
-                                    <li>Applied our expertise in designing, implementing and supporting highly
+                                    <li>Airtight security verified by multiple certified cyber security professionals
+                                    </li>
+                                    <li>Applied all our expertise in designing, implementing and supporting highly
                                         available, low latency distributed systems at scale</li>
                                 </ul>
                             </div>
@@ -338,7 +377,7 @@
                                             <td><i class="fa fa-times "></i></td>
                                         </tr>
                                         <tr>
-                                            <td>Multiple Datacenter Redundancy</td>
+                                            <td>Multiple Data Center Redundancy</td>
                                             <td><i class="fa fa-check  text-success"></i></td>
                                             <td><i class="fa fa-times "></i></td>
                                         </tr>
@@ -358,29 +397,43 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-12">
-                            <h4>Are your rates and returns competitive?</h4>
-                            <p>Yes. Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out
-                                print, graphic or web designs. The passage is attributed to an unknown typesetter in the
-                                15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et
-                                Malorum for use in a type specimen book.</p>
+                            <h4>Are your returns competitive?</h4>
+                            <p>
+                                Very much so. Although we put in a greater long-term investment for hardware
+                                compared to most others, our returns will still be as good, neck-to-neck or better.
+                                We have done our best to optimise factors in our control contributing
+                                to maximising rewards for our delegators. These include our generous pledge, minimum
+                                fixed fees, very
+                                reasonable variable % fees as well as providing maximum uptime and efficiently
+                                performing node maintenance.
+                            </p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-12">
                             <h4>Can I incur any loss of ADA?</h4>
-                            <p>No. lorem ipsum is a filler text commonly used to demonstrate the graphic elements of a
-                                document or visual presentation. Replacing meaningful content that could be distracting
-                                with placeholder text may allow viewers to focus on graphic aspects such as font,
-                                typography, and page layout.</p>
+                            <p>
+                                No, there is zero risk of losing ADA when you delegate to us through supported
+                                wallets such as <a href='https://daedaluswallet.io/' target='_blank'>Daedalus</a> or <a
+                                    href='https://yoroi-wallet.com/' target='_blank'>Yoroi</a>.
+                                In fact, you still have full custody to spend delegated ADA as the delegation process
+                                does not
+                                "lock" the ADA up in a strict sense, it will only impact your extra rewards over that
+                                epoch.
+                            </p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-12">
                             <h4>Can you help me start my own pool?</h4>
-                            <p>Maybe. First, the source of Lorem Ipsum—tracked down by Hampden-Sydney Director of
-                                Publications Richard McClintock---is Roman lawyer, statesmen, and philosopher Cicero,
-                                from an essay called “On the Extremes of Good and Evil,” or De Finibus Bonorum et
-                                Malorum.</p>
+                            <p>
+                                Although we have <a href='https://www.github.com/SafeStak'
+                                    target='_blank'>open-sourced</a> all our underlying resources for creating and
+                                maintaining our
+                                stake pool, we are planning an in-depth tutorial (perhaps with a video) once we are
+                                happy with the way our stake pool is running. Time is a such a fickle beast!
+                                If you have a significant holding of ADA and would like us to manage/operate a pool for you please <a href='mailto:safestak@pm.me'>contact us</a>.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -414,8 +467,8 @@
                     </a>
                 </li>
                 <li class="footer-link protonmail">
-                    <a aria-label="SafeStak on ProtonMail" title="SafeStak on ProtonMail"
-                        href="mailto:safestak@pm.me" target="_blank" rel="noopener noreferrer">
+                    <a aria-label="SafeStak on ProtonMail" title="SafeStak on ProtonMail" href="mailto:safestak@pm.me"
+                        target="_blank" rel="noopener noreferrer">
                         <svg stroke="#4273ea" fill="#4273ea" stroke-width="0" viewBox="0 0 24 24" height="1.1em"
                             width="1.1em" xmlns="http://www.w3.org/2000/svg">
                             <path xmlns="http://www.w3.org/2000/svg"
