Tweaked mock concept re-design

--- a/concept/concept.html
+++ b/concept/concept.html
@@ -194,7 +194,7 @@
                                 hands
                             </h1>
                             <p class="banner_sub_head mb-4 mt-4">
-                                Rest easy while investing in a better future as our dependable and resilient cloud infrastructure give stakeholders
+                                Rest easy while investing in a fairer future. Our dependable and resilient cloud infrastructure give stakeholders
                                 exceptional return on stake, all while reliably powering and fortifying <a
                                     href='https://www.cardano.org/ouroboros/' target='_blank'
                                     style='color:#EEE'>Cardano's game-changing blockchain network</a>
@@ -253,7 +253,7 @@
                                 <ul>
                                     <li>
                                         Your return on stake grows with us
-                                        <ul style='padding:5px 20px 0;font-family:consolas; font-size:0.8em;'>
+                                        <ul style='padding:5px 20px 0;font-family:Consolas, monaco, monospace; font-size:0.8em;'>
                                             <li>5M-10M staked => 4.3% fees</li>
                                             <li>10-20M staked => 4.0% fees</li>
                                             <li>20-40M staked => 3.5% fees</li>
@@ -399,7 +399,7 @@
                         <div class="col-lg-12">
                             <h4>Are your returns competitive?</h4>
                             <p>
-                                Very much so. Although we put in a greater long-term investment for hardware
+                                Yes and very much so. Although we put in a greater long-term investment for hardware
                                 compared to most others, our returns will still be as good, neck-to-neck or better.
                                 We have done our best to optimise factors in our control contributing
                                 to maximising rewards for our delegators. These include our generous pledge, minimum
@@ -416,7 +416,7 @@
                                 No, there is zero risk of losing ADA when you delegate to us through supported
                                 wallets such as <a href='https://daedaluswallet.io/' target='_blank'>Daedalus</a> or <a
                                     href='https://yoroi-wallet.com/' target='_blank'>Yoroi</a>.
-                                In fact, you still have full custody to spend delegated ADA as the delegation process
+                                In fact, you still have full custody to spend your delegated ADA as the delegation process
                                 does not
                                 "lock" the ADA up in a strict sense, it will only impact your extra rewards over that
                                 epoch.
