Tweaked mock concept re-design

--- a/concept/concept.html
+++ b/concept/concept.html
@@ -54,14 +54,14 @@
             color: #EEE;
             font-size: 34px;
             letter-spacing: 2px;
-            font-family: Consolas, monaco, monospace;
+            font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
             margin: 0;
             text-transform: none;
         }
 
         dt {
             display: inline-block;
-            color: rgb(255, 118, 118);
+            color: #EEE;
             font-size: 0.7em;
             font-weight: bold;
             text-transform: uppercase;
@@ -70,7 +70,7 @@
 
         dd {
             display: inline-block;
-            color: #EEE;
+            color: rgb(255, 118, 118);
             padding: 0;
             margin: 0 3px;
         }
@@ -161,7 +161,7 @@
             <div class="container">
 
                 <a class="navbar-brand" href="/">
-                    <h1 class="logo">🔒{SAFE}stak</h1>
+                    <h1 class="logo">🔒<span style='color:rgb(255, 118, 118)'>{</span>SAFE<span style='color:rgb(255, 118, 118)'>}</span>stak</h1>
                 </a>
 
                 <button class="navbar-toggler navbar-dark custom-toggler" type="button" data-toggle="collapse"
@@ -190,7 +190,7 @@
                     <div class="col-md-6 col-lg-6">
                         <div class="banner_text forResBannerText">
                             <h1 class="banner_title">
-                                Your <img style='width:28px; height: 28px;' src='adacoin.png' alt="₳" /> in safe
+                                Your <img style='width:32px; height: 32px;' src='adacoin.png' alt="₳" /> in safe
                                 hands
                             </h1>
                             <p class="banner_sub_head mb-4 mt-4">
@@ -203,7 +203,7 @@
                                 <dt>Ticker</dt>
                                 <dd>SAFE</dd>
                                 <dt>Margin</dt>
-                                <dd><a href='#rewards' style='color:#EEE'>1.9% - 4.4%</a></dd>
+                                <dd><a href='#rewards' style='color:rgb(255, 118, 118)'>1.9% - 4.4%</a></dd>
                                 <dt>Pledge</dt>
                                 <dd>500,000 ₳</dd>
                             </dl>
@@ -263,9 +263,8 @@
                                     </li>
                                     <li>Lowest fixed fees as required by the protocol - 228 ₳/epoch at the
                                         time of writing</li>
-                                    <li>We are competitive perfectionists at heart, continuously optimising for block production and
-                                        rewards. Relevant metrics are monitored and regularly benchmarked
-                                        against our peers</li>
+                                    <li>Competitive perfectionists at heart, we're continuously optimising our whole stack for generating blocks. 
+                                        Key metrics are monitored and regularly benchmarked against our peers to stay ahead of the pack</li>
                                 </ul>
                             </div>
                         </div>
@@ -320,13 +319,13 @@
                             <div class="debt-content">
                                 <ul>
                                     <li>
-                                        Combined 30+ years of senior experience in the largest technology and e-commerce
+                                        30+ years of combined experience in the largest technology and e-commerce
                                         powerhouses in the world
                                     </li>
                                     <li>Airtight security verified by multiple certified cyber security professionals
                                     </li>
-                                    <li>Applied all our expertise in designing, implementing and supporting highly
-                                        available, low latency distributed systems at scale</li>
+                                    <li>Proven track-record in designing, implementing and supporting highly
+                                        available, low latency distributed systems at scale. Ask us for our creds!</li>
                                 </ul>
                             </div>
                         </div>
